Fix: Potential fix for whitespace issue

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 html {
     background-image: linear-gradient(black, #660086);
+
+    height: 100vh;
+    width: 100vh;
+
+    margin: 0;
+    padding: 0;
 }
 
 body {
